--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-docs:
-    if: ${{ github.event_name == 'push' || (github.event.pull_request.head.repo.full_name != 'DS4SD/docling' && github.event.pull_request.head.repo.full_name != 'ds4sd/docling') }}
+    if: ${{ github.event_name == 'push' || (github.event.pull_request.head.repo.full_name != 'mouraworks/docowling' && github.event.pull_request.head.repo.full_name != 'mouraworks/docowling') }}
     uses: ./.github/workflows/docs.yml
     with:
       deploy: false
