--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,5 @@ env:
 
 jobs:
   code-checks:
-    if: ${{ github.event_name == 'push' || (github.event.pull_request.head.repo.full_name != 'DS4SD/docling' && github.event.pull_request.head.repo.full_name != 'ds4sd/docling') }}
+    if: ${{ github.event_name == 'push' || (github.event.pull_request.head.repo.full_name != 'mouraworks/docowling' && github.event.pull_request.head.repo.full_name != 'mouraworks/docowling') }}
     uses: ./.github/workflows/checks.yml
